@@ -13,7 +13,6 @@ import org.springframework.stereotype.Service;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Service
 @AllArgsConstructor
@@ -30,12 +29,13 @@ public class DailyOfferQueryServiceImpl implements DailyOfferQueryService {
      * @return A list of {@link DailyOffer} containing {@link DailyOfferResponseDTO} objects.
      */
     @Override
-    public List<DailyOfferResponseDTO> getTodayDailyOffersByPlaceId(UUID placeId) {
-        placeRepository.findById(placeId).orElseThrow(() -> new PlaceNotFoundException(placeId));
-        LocalDateTime today = LocalDateTime.now();
-        List<DailyOffer> dailyOffers = dailyOfferRepository.findTodayDailyOffersByPlaceId(today, placeId);
+    public List<DailyOfferResponseDTO> getDailyOffersByPlaceId(UUID placeId) {
+        checkIfPlaceExists(placeId);
 
-        return dailyOffers.stream().map(dailyOfferConverter::toDailyOfferResponseDTO).collect(Collectors.toList());
+        LocalDateTime today = LocalDateTime.now();
+        List<DailyOffer> dailyOffers = dailyOfferRepository.findDailyOffersByPlaceId(today, placeId);
+
+        return dailyOffers.stream().map(dailyOfferConverter::toDailyOfferResponseDTO).toList();
     }
 
     /**
@@ -44,10 +44,44 @@ public class DailyOfferQueryServiceImpl implements DailyOfferQueryService {
      *
      * @return A list of {@link DailyOffer} containing {@link DailyOfferResponseDTO} objects.
      */
-    @Override public List<DailyOfferResponseDTO> getTodayDailyOffers() {
+    @Override
+    public List<DailyOfferResponseDTO> getDailyOffers() {
         LocalDateTime today = LocalDateTime.now();
-        List<DailyOffer> dailyOffers = dailyOfferRepository.findTodayDailyOffers(today);
+        List<DailyOffer> dailyOffers = dailyOfferRepository.findAllDailyOffers(today);
 
-        return dailyOffers.stream().map(dailyOfferConverter::toDailyOfferResponseDTO).collect(Collectors.toList());
+        return dailyOffers.stream().map(dailyOfferConverter::toDailyOfferResponseDTO).toList();
+    }
+
+    /**
+     * Retrieves {@link DailyOffer} objects. Method retrieves all upcoming offers for a certain place.
+     *
+     * @param placeId uuid of the place where the dailyOffer is valid, for filtering
+     * @return A list of {@link DailyOffer} containing {@link DailyOfferResponseDTO} objects.
+     */
+    @Override
+    public List<DailyOfferResponseDTO> getUpcomingOffersByPlaceId(UUID placeId) {
+        checkIfPlaceExists(placeId);
+
+        LocalDateTime today = LocalDateTime.now();
+        List<DailyOffer> dailyOffers = dailyOfferRepository.findUpcomingOffersByPlaceId(today, placeId);
+
+        return dailyOffers.stream().map(dailyOfferConverter::toDailyOfferResponseDTO).toList();
+    }
+
+    /**
+     * Retrieves {@link DailyOffer} objects. Method retrieves all upcoming offers.
+     *
+     * @return A list of {@link DailyOffer} containing {@link DailyOfferResponseDTO} objects.
+     */
+    @Override
+    public List<DailyOfferResponseDTO> getUpcomingOffers() {
+        LocalDateTime today = LocalDateTime.now();
+        List<DailyOffer> dailyOffers = dailyOfferRepository.findAllUpcomingOffers(today);
+
+        return dailyOffers.stream().map(dailyOfferConverter::toDailyOfferResponseDTO).toList();
+    }
+
+    void checkIfPlaceExists(UUID placeId) {
+        placeRepository.findById(placeId).orElseThrow(() -> new PlaceNotFoundException(placeId));
     }
 }
